--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -14,10 +14,8 @@ sqldelight="2.0.0-alpha02"
 testcontainers="1.17.2"
 hikari="5.0.1"
 postgresql="42.3.6"
-kjwt="0.5.3"
 kotest-arrow="1.2.5"
-slugify="2.5"
-bcrypt="0.9.0"
+kafka="0.2.0"
 
 [libraries]
 arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
@@ -52,9 +50,7 @@ testcontainers-postgresql = { module = "org.testcontainers:postgresql", version.
 hikari = { module = "com.zaxxer:HikariCP", version.ref="hikari" }
 sqldelight-jdbc = { module = "app.cash.sqldelight:jdbc-driver", version.ref="sqldelight" }
 postgresql = { module="org.postgresql:postgresql", version.ref="postgresql" }
-kjwt-core = { module="io.github.nefilim.kjwt:kjwt-core", version.ref="kjwt" }
-slugify = { module="com.github.slugify:slugify", version.ref="slugify" }
-bcrypt = { module="at.favre.lib:bcrypt", version.ref="bcrypt" }
+kotlin-kafka = { module="io.github.nomisrev:kotlin-kafka", version.ref="kafka" }
 
 [plugins]
 arrowGradleConfig-formatter = { id = "io.arrow-kt.arrow-gradle-config-formatter", version.ref = "arrowGradleConfig" }
