--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -1,27 +1,28 @@
 [versions]
 arrow = "1.1.2"
 arrowGradleConfig = "0.10.2"
-coroutines = "1.6.2"
-dokka = "1.6.21"
-kotlin = "1.6.21"
-kotest = "5.3.0"
-kotest-plugin = "5.3.0"
+coroutines = "1.6.3"
+dokka = "1.7.0"
+kotlin = "1.7.10"
+kotest = "5.3.2"
+kotest-plugin = "5.3.2"
 kover = "0.5.1"
 detekt = "1.20.0"
-ktor = "2.0.2"
+ktor = "2.0.3"
 logback = "1.2.11"
-sqldelight="2.0.0-alpha02"
-testcontainers="1.17.2"
+sqldelight="2.0.0-alpha03"
+testcontainers="1.17.3"
 hikari="5.0.1"
-postgresql="42.3.6"
+postgresql="42.4.0"
 kotest-arrow="1.2.5"
+kotest-testcontainers="1.3.3"
 kafka="0.2.0"
 
 [libraries]
 arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
 arrow-optics = { module = "io.arrow-kt:arrow-optics", version.ref = "arrow" }
 arrow-fx = { module = "io.arrow-kt:arrow-fx-coroutines", version.ref = "arrow" }
-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
+coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm", version.ref = "coroutines" }
 coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 dokka-core = { module = "org.jetbrains.dokka:dokka-core", version.ref = "dokka" }
 kotest-assertionsCore = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
@@ -29,6 +30,7 @@ kotest-frameworkEngine = { module = "io.kotest:kotest-framework-engine", version
 kotest-property = { module = "io.kotest:kotest-property", version.ref = "kotest" }
 kotest-runnerJUnit5 = { module = "io.kotest:kotest-runner-junit5", version.ref = "kotest" }
 kotest-arrow = { module = "io.kotest.extensions:kotest-assertions-arrow", version.ref = "kotest-arrow" }
+kotest-testcontainers = { module = "io.kotest.extensions:kotest-extensions-testcontainers", version.ref = "kotest-testcontainers" }
 ktor-server-content-negotiation = { module = "io.ktor:ktor-server-content-negotiation", version.ref = "ktor" }
 ktor-server-core = { module = "io.ktor:ktor-server-core", version.ref = "ktor" }
 ktor-server-cors = { module = "io.ktor:ktor-server-cors", version.ref = "ktor" }
@@ -49,8 +51,32 @@ detekt-gradle = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", v
 testcontainers-postgresql = { module = "org.testcontainers:postgresql", version.ref = "testcontainers" }
 hikari = { module = "com.zaxxer:HikariCP", version.ref="hikari" }
 sqldelight-jdbc = { module = "app.cash.sqldelight:jdbc-driver", version.ref="sqldelight" }
+sqldelight-postgresql = { module = "app.cash.sqldelight:postgresql-dialect", version.ref="sqldelight" }
 postgresql = { module="org.postgresql:postgresql", version.ref="postgresql" }
 kotlin-kafka = { module="io.github.nomisrev:kotlin-kafka", version.ref="kafka" }
+
+[bundles]
+arrow = ["arrow-core", "arrow-fx"]
+ktor-server = [
+    "ktor-server-core",
+    "ktor-server-cors",
+    "ktor-server-content-negotiation",
+    "ktor-server-defaultheaders",
+    "ktor-server-netty",
+    "ktor-server-auth",
+]
+ktor-client = [
+    "ktor-client-content-negotiation",
+    "ktor-client-serialization"
+]
+kotest = [
+    "kotest-assertionsCore",
+    "kotest-frameworkEngine",
+    "kotest-property",
+    "kotest-runnerJUnit5",
+    "kotest-arrow",
+    "kotest-testcontainers"
+]
 
 [plugins]
 arrowGradleConfig-formatter = { id = "io.arrow-kt.arrow-gradle-config-formatter", version.ref = "arrowGradleConfig" }
