--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -41,6 +41,7 @@ ktor-server-auth = { module = "io.ktor:ktor-server-auth", version.ref = "ktor" }
 ktor-server-auth-jwt = { module = "io.ktor:ktor-server-auth-jwt", version.ref = "ktor" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
+ktor-client = { module = "io.ktor:ktor-client-apache", version.ref = "ktor" }
 ktor-client-serialization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktor" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-serialization = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
@@ -67,7 +68,9 @@ ktor-server = [
 ]
 ktor-client = [
     "ktor-client-content-negotiation",
-    "ktor-client-serialization"
+    "ktor-client-serialization",
+    "ktor-client-core",
+    "ktor-client"
 ]
 kotest = [
     "kotest-assertionsCore",
