--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -17,6 +17,7 @@ postgresql="42.4.0"
 kotest-arrow="1.2.5"
 kotest-testcontainers="1.3.3"
 kafka="0.2.0"
+flyway="9.1.3"
 
 [libraries]
 arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
@@ -55,6 +56,7 @@ sqldelight-jdbc = { module = "app.cash.sqldelight:jdbc-driver", version.ref="sql
 sqldelight-postgresql = { module = "app.cash.sqldelight:postgresql-dialect", version.ref="sqldelight" }
 postgresql = { module="org.postgresql:postgresql", version.ref="postgresql" }
 kotlin-kafka = { module="io.github.nomisrev:kotlin-kafka", version.ref="kafka" }
+flyway = { module="org.flywaydb:flyway-core", version.ref="flyway"}
 
 [bundles]
 arrow = ["arrow-core", "arrow-fx"]
