--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -16,8 +16,11 @@ hikari="5.0.1"
 postgresql="42.4.0"
 kotest-arrow="1.2.5"
 kotest-testcontainers="1.3.3"
-kafka="0.2.0"
+kotlin-kafka="0.3.0"
 flyway="9.1.3"
+kafka = "7.1.1"
+avro = "1.11.0"
+avro4k = "1.6.0"
 
 [libraries]
 arrow-core = { module = "io.arrow-kt:arrow-core", version.ref = "arrow" }
@@ -55,8 +58,12 @@ hikari = { module = "com.zaxxer:HikariCP", version.ref="hikari" }
 sqldelight-jdbc = { module = "app.cash.sqldelight:jdbc-driver", version.ref="sqldelight" }
 sqldelight-postgresql = { module = "app.cash.sqldelight:postgresql-dialect", version.ref="sqldelight" }
 postgresql = { module="org.postgresql:postgresql", version.ref="postgresql" }
-kotlin-kafka = { module="io.github.nomisrev:kotlin-kafka", version.ref="kafka" }
+kotlin-kafka = { module="io.github.nomisrev:kotlin-kafka", version.ref="kotlin-kafka" }
 flyway = { module="org.flywaydb:flyway-core", version.ref="flyway"}
+kafka-schema-registry = { module = "io.confluent:kafka-schema-registry-client", version.ref = "kafka" }
+kafka-avro-serializer = { module = "io.confluent:kafka-avro-serializer", version.ref = "kafka" }
+avro = { module = "org.apache.avro:avro", version.ref = "avro" }
+avro4k = { module = "com.github.avro-kotlin.avro4k:avro4k-core", version.ref = "avro4k" }
 
 [bundles]
 arrow = ["arrow-core", "arrow-fx"]
